crates/overdrive-core/tests/compile_fail/intent_vs_observation.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/intent_vs_observation.rs:24:25
   |
24 |     expects_observation(as_intent);
   |     ------------------- ^^^^^^^^^ expected trait `ObservationStore`, found trait `IntentStore`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&(dyn ObservationStore + 'static)`
              found reference `&(dyn IntentStore + 'static)`
note: function defined here
  --> tests/compile_fail/intent_vs_observation.rs:16:4
   |
16 | fn expects_observation(_store: &dyn ObservationStore) {}
   |    ^^^^^^^^^^^^^^^^^^^ -----------------------------
